checked out vg to https://github.com/vgteam/vg/commit/83bc2bff616d8183906f5afc65186e5c64e1f1b7

--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,6 @@
 [submodule "BH15"]
 	path = BH15
 	url = https://github.com/orenogithub/BH15
+[submodule "vg"]
+	path = vg
+	url = https://github.com/vgteam/vg
