checked out bio-virtuoso to https://github.com/misshie/bio-virtuoso/commit/7538d98f9e82c370c40899974c3d522cc3efdd0c

--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 [submodule "vg"]
 	path = vg
 	url = https://github.com/vgteam/vg
+[submodule "bio-virtuoso"]
+	path = bio-virtuoso
+	url = https://github.com/misshie/bio-virtuoso
