checked out ensembl-docker to https://github.com/helios/ensembl-docker/commit/101859368f82ffdf767f934d83f69cfffe96e591

--- a/.gitmodules
+++ b/.gitmodules
@@ -44,3 +44,6 @@
 [submodule "bio-virtuoso"]
 	path = bio-virtuoso
 	url = https://github.com/misshie/bio-virtuoso
+[submodule "ensembl-docker"]
+	path = ensembl-docker
+	url = https://github.com/helios/ensembl-docker
