--- a/.gitmodules
+++ b/.gitmodules
@@ -50,3 +50,6 @@
 [submodule "tool-registry-schemas"]
 	path = tool-registry-schemas
 	url = https://github.com/ga4gh/tool-registry-schemas
+[submodule "workflow-service"]
+	path = workflow-service
+	url = https://github.com/common-workflow-language/workflow-service
