checked out HPO-japanese to 837e6eb0d3895ca97de61c379dee40f754b16c32

--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,6 @@
 [submodule "workflow-service"]
 	path = workflow-service
 	url = https://github.com/common-workflow-language/workflow-service
+[submodule "HPO-japanese"]
+	path = HPO-japanese
+	url = https://github.com/ogishima/HPO-japanese.git
